--- a/templates/upload.html
+++ b/templates/upload.html
@@ -56,7 +56,7 @@
 				<br>
 				<hr>
 				<br>
-				<button type="button" onclick="Analysis()" class="btn btn-dark" id="Analyze-Button">Analyze</button>
+				<button type="button" onclick="Analysis3()" class="btn btn-dark" id="Analyze-Button">Analyze</button>
 			</div>
 			<div class="col" id="selector">
 				<div class="row">
@@ -82,7 +82,7 @@
 	</div>
 		<div class="col">
 			<div id="figure">
-				<img src='' alt="Histogram will be displayed here once you click 'Analyze'" id="figure-address">
+				<img src= {{ source }} alt="Histogram will be displayed here once you click 'Analyze'" id="figure-address">
 			</div>
 		</div>
 	</div>
@@ -110,6 +110,22 @@
 		    if (this.readyState == 4 && this.status == 200) {
 		      document.getElementById("figure").innerHTML =
 		      this.responseText;
+		    }
+		  };
+		xhttp.open("GET", "/process?e="+e+"&d="+d, true);
+		xhttp.send();
+	}
+</script>
+<script type="text/javascript">
+	function Analysis3(){
+		var xhttp = new XMLHttpRequest();
+		var e=document.getElementById("epsilon").value;
+		var d=document.getElementById("delta").value;
+		xhttp.onreadystatechange = function() {
+		    if (this.readyState == 4 && this.status == 200) {
+		      document.open();
+		      document.write(this.responseText);
+		      document.close();
 		    }
 		  };
 		xhttp.open("GET", "/process?e="+e+"&d="+d, true);
