--- a/templates/index.html
+++ b/templates/index.html
@@ -29,27 +29,12 @@
 			</ul>
 		</div>
 		<div class="col-1"></div>
-		<div class="col-4" id="forms">
-			<form action="login.html">
-				<div class="form-group">
-					<label for="name">Name</label>
-					<input type="text" name="name" class="form-control" placeholder="Your Name" id="name">
-				</div>
-				<div class="form-group">
-					<label for="email1">Email address</label>
-					<input type="email" name="email" class="form-control" placeholder="Enter email" id="email1">
-				</div>
-				<div class="form-group">
-					<label for="pass1">Password</label>
-					<input type="password" name="password" class="form-control" placeholder="Password" id="pass1">
-				</div>
-				<div class="form-group form-check">
-					<input type="checkbox" class="form-check-input" id="checkpoint">
-					<label class="form-check-label" for="checkpoint" value="" required><small>I have read and agree to the<a href="#"> terms and conditions</a></small>.</label>
-				</div>
-				<button type="submit" class="btn btn-primary"> SignUp </button>
-
-			</form>
+		<div class="col-4" id="choice">
+			<br><br><br><br>
+			<a href="upload" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>DP Visualisation</h1></a>
+			<br><br><br><br>
+			<a href="dpml" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>DPML</h1></a></button>
+			<br>
 		</div>
         
 </body>
