--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="/static/css/upload_form_style.css">
-		<title>Welcome</title>
+		<title>Visualization</title>
 	</head>
 <body background="/static/images/background.jpg">
 		
@@ -14,7 +14,7 @@
 		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Home</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" href="home.html">Logout</a>
+		    <a class="nav-link" href="home">Logout</a>
 		  </li>
 		</ul>	
 	</nav>
