--- a/static/css/home_form_style.css
+++ b/static/css/home_form_style.css
@@ -29,3 +29,18 @@ body {
   margin-left: 20px;
   font-family: "Times New Roman", Times, serif;
 }
+
+#choice {
+  background-color: #D3D3D3;
+  opacity: 0.8;
+  border: 20px;
+  padding-top: 100px;
+  padding-right: 30px;
+  padding-bottom: 120px;
+  padding-left: 60px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  margin-right: 20px;
+  margin-left: 20px;
+  font-family: "Times New Roman", Times, serif;
+}
