--- a/templates/home.html
+++ b/templates/home.html
@@ -8,13 +8,13 @@
 <body background="/static/images/background.jpg">
 		
 	<nav id="navbar-example2" class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="#">DIFFPRIV.COM</a>
+		<a class="navbar-brand" href="#">PRIVAZ</a>
 		  <ul class="nav justify">
 		  <li class="nav-item">
 		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Home</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" href="login.html">Login</a>
+		    <a class="nav-link" href="index">Login</a>
 		  </li>
 		</ul>	
 	</nav>
