--- a/templates/dpml.html
+++ b/templates/dpml.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- INPUTS: epsilon, lambda, epochs, degree -->
 <html>
 	<head>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -8,7 +9,7 @@
 <body background="/static/images/background.jpg">
 		
 	<nav id="navbar-example2" class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="#">DIFFPRIV.COM</a>
+		<a class="navbar-brand" href="#">PRIVAZ</a>
 		  <ul class="nav justify">
 		  <li class="nav-item">
 		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Home</a>
@@ -21,65 +22,68 @@
 	<div class="row mt-4 text-center">
 		<div class="col-5" id="inputs">
 		<div class="row">
-			<div class="col-3">
+			<div class="col text-left">Set Privacy Parameter: <br>
 				<div class="input-group mb-3">
 				  <div class="input-group-prepend">
+				  	<br>
 				    <span class="input-group-text" id="basic-addon1">epsilon</span>
 				  </div>
-				  <input type="text" class="form-control" placeholder="0.1" aria-label="0.1" aria-describedby="basic-addon1" id="epsilon">
-				</div>
-			</div>
-
-			<div class="col-3">
-				<div class="input-group mb-3">
-				  <div class="input-group-prepend">
-				    <span class="input-group-text" id="basic-addon1">delta</span>
-				  </div>
-				  <input type="text" class="form-control" placeholder="0.1" aria-label="0.1" aria-describedby="basic-addon1" id="delta">
+				  <input type="number" step=any class="form-control" placeholder="0.1" aria-label="0.1" aria-describedby="basic-addon1" id="epsilon">
 				</div>
 			</div>
 		</div>
-		<div class="input-group mb-3">
+		<div class="text-left">Upload the dataset:</div> <br>
+		<!-- <div class="input-group mb-3">
 		  <div class="input-group-prepend">
 		    <span class="input-group-text" id="inputGroupFileAddon01">Upload Dataset</span>
 		  </div>
 		  <div class="custom-file">
-		    <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+		    <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" name="dpml_file" enctype="multipart/form-data">
 		    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
 		  </div>
-		</div>
+		</div> -->
+		<form action="dpml_upload_php" method="POST" enctype="multipart/form-data">
+			<input type="file" name="file" id="file" class="hidden">
+				<label for="file">Select file</label>
+						<button type="submit" name="submit"> {{ UPLOAD_STATUS }} </button>
+
+		</form>
+		<div class="text-left">Set Learning Hyperparameters:</div>
+			<!-- INPUT LAMBDA -->
+			<div class="input-group mb-3">
+				  <div class="input-group-prepend">
+				    <span class="input-group-text" id="basic-addon1">Lambda</span>
+				  </div>
+				  <input type="number" step=any class="form-control" placeholder="1.0" aria-label="0.1" aria-describedby="basic-addon1" id="lambda">
+			</div>
+			<!-- INPUT Degree -->
+			<div class="input-group mb-3">
+				  <div class="input-group-prepend">
+				    <span class="input-group-text" id="basic-addon1">Degree</span>
+				  </div>
+				  <input type="number" class="form-control" placeholder="6" aria-label="0.1" aria-describedby="basic-addon1" id="degree">
+			</div>
+			<!-- INPUT EPOCHS -->
+			<div class="input-group mb-3">
+				  <div class="input-group-prepend">
+				    <span class="input-group-text" id="basic-addon1">No. of Epochs</span>
+				  </div>
+				  <input type="number" class="form-control" placeholder="800" aria-label="0.1" aria-describedby="basic-addon1" id="epochs">
+			</div>
+			<!-- INPUT ALPHA -->
+			<div class="input-group mb-3">
+				  <div class="input-group-prepend">
+				    <span class="input-group-text" id="basic-addon1">Alpha,for Gradient Descent</span>
+				  </div>
+				  <input type="number" step=any class="form-control" placeholder="1" aria-label="0.1" aria-describedby="basic-addon1" id="alpha">
+			</div>
+		<!-- ANALYZE BUTTON -->
 		<div class="row">
-			<div class="col-2">
-				<br>
-				<br>
-				<button type="button" class="btn btn-dark">Query</button>
-				<br>
-				<hr>
-				<br>
+			<div class="col">
 				<button type="button" onclick="Analysis3()" class="btn btn-dark" id="Analyze-Button">Analyze</button>
-			</div>
-			<div class="col" id="selector">
-				<div class="row">
-					<div class="col">
-					<select class="custom-select" size="10">
-					  <option selected>Select Item</option>
-					  <option value="1">One</option>
-					  <option value="2">Two</option>
-					  <option value="3">Three</option>
-					</select>
-					</div>
-					<div class="col">
-					<select class="custom-select" size="10">
-					  <option selected>Select Measure</option>
-					  <option value="1">Mean</option>
-					  <option value="2">Median</option>
-					  <option value="3">Mode</option>
-					</select>
-					</div>
-				</div>
-			</div>
+			</div>			
 		</div>
-	</div>
+    </div>
 		<div class="col">
 			<div id="figure">
 				<img src= {{ source }} alt="Histogram will be displayed here once you click 'Analyze'" id="figure-address">
@@ -91,7 +95,10 @@
 	function Analysis3(){
 		var xhttp = new XMLHttpRequest();
 		var e=document.getElementById("epsilon").value;
-		var d=document.getElementById("delta").value;
+		var lambda=document.getElementById("lambda").value;
+		var degree=document.getElementById("degree").value;
+		var epochs=document.getElementById("epochs").value;
+		var alpha=document.getElementById("alpha").value;
 		xhttp.onreadystatechange = function() {
 		    if (this.readyState == 4 && this.status == 200) {
 		      document.open();
@@ -99,7 +106,7 @@
 		      document.close();
 		    }
 		  };
-		xhttp.open("GET", "/dpml_process?e="+e+"&d="+d, true);
+		xhttp.open("GET", "/dpml_process?e="+e+"&lambda="+lambda+"&degree="+degree+"&epochs="+epochs+"&alpha="+alpha, true);
 		xhttp.send();
 	}
 </script>
