--- a/templates/upload.html
+++ b/templates/upload.html
@@ -62,16 +62,16 @@
 				<br>
 				<button type="button" onclick="Analysis3()" class="btn btn-dark" id="Analyze-Button">Analyze</button>
 			</div>
-			<div class="col" id="selector">
+			<div class="col" >
 				<div class="row">
 					<div class="col">
-					<select class="custom-select" size="10">
+					<select class="custom-select" size="10" id="selector">
 					  <option selected>Select Item</option>
 					  {{ OPTIONS_LIST|safe }}
 					</select>
 					</div>
 					<div class="col">
-					<select class="custom-select" size="10">
+					<select class="custom-select" size="10" id="measure-selector">
 					  <option selected>Select Measure</option>
 					  <option value="1">Mean</option>
 					  <option value="2">Median</option>
@@ -93,13 +93,16 @@
 		var xhttp = new XMLHttpRequest();
 		var e=document.getElementById("epsilon").value;
 		var d=document.getElementById("delta").value;
+		var selection=document.getElementById("selector").value;
+		var measure=document.getElementById("measure-selector").value;
+		
 		xhttp.onreadystatechange = function() {
 		    if (this.readyState == 4 && this.status == 200) {
 		      document.getElementById("figure-address").src =
 		      this.responseText;
 		    }
 		  };
-		xhttp.open("GET", "/process?e="+e+"&d="+d, true);
+		xhttp.open("GET", "/process?e="+e+"&d="+d+"&selection="+selection+"&measure="+measure, true);
 		xhttp.send();
 	}
 </script>
@@ -123,6 +126,9 @@
 		var xhttp = new XMLHttpRequest();
 		var e=document.getElementById("epsilon").value;
 		var d=document.getElementById("delta").value;
+		var selection=document.getElementById("selector").value;
+		var measure=document.getElementById("measure-selector").value;
+		
 		xhttp.onreadystatechange = function() {
 		    if (this.readyState == 4 && this.status == 200) {
 		      document.open();
@@ -130,7 +136,7 @@
 		      document.close();
 		    }
 		  };
-		xhttp.open("GET", "/process?e="+e+"&d="+d, true);
+		xhttp.open("GET", "/process?e="+e+"&d="+d+"&selection="+selection+"&measure="+measure, true);
 		xhttp.send();
 	}
 </script>
