--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Home</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" href="login.html">Login</a>
+		    <a class="nav-link" href="login.html">Logout</a>
 		  </li>
 		</ul>	
 	</nav>
@@ -30,11 +30,12 @@
 		</div>
 		<div class="col-1"></div>
 		<div class="col-4" id="choice">
-			<br><br><br><br>
+			<br><br><br>
 			<a href="upload" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>DP Visualisation</h1></a>
-			<br><br><br><br>
+			<br><br><br>
 			<a href="dpml" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>DPML</h1></a></button>
-			<br>
+			<br><br><br>
+			<a href="query" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>Query DatasetL</h1></a></button>
 		</div>
         
 </body>
