DP dataset generation code

--- a/templates/query.html
+++ b/templates/query.html
@@ -34,8 +34,9 @@
 {{TABS_LIST|safe}}
 
 </div>
+<div id="divs_tabs_list">
 {{DIVS_TABS_LIST|safe}}
-
+</div>
 <div class="row mt-4 text-center">
 	<div class="col">
 		QIID:  <input type="text" id="qiid">
