--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Home</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" href="login.html">Logout</a>
+		    <a class="nav-link" href="home">Logout</a>
 		  </li>
 		</ul>	
 	</nav>
@@ -25,7 +25,7 @@
 				<h3><li>Differentialy Private Data Analysis</li>
 				<li>DP Visulaisation</li>
 				<li>Machine Learning Regression</li>
-				<li>Some other feature</li></h3>
+				<li>Privacy Preserving Dataset Generation</li></h3>
 			</ul>
 		</div>
 		<div class="col-1"></div>
@@ -35,7 +35,7 @@
 			<br><br><br>
 			<a href="dpml" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>DPML</h1></a></button>
 			<br><br><br>
-			<a href="query" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>Query DatasetL</h1></a></button>
+			<a href="query" class="btn btn-primary btn-lg active btn-block" role="button" aria-pressed="true"><h1>Query Dataset</h1></a></button>
 		</div>
         
 </body>
