--- a/templates/home.html
+++ b/templates/home.html
@@ -11,10 +11,10 @@
 		<a class="navbar-brand" href="#">PRIVAZ</a>
 		  <ul class="nav justify">
 		  <li class="nav-item">
-		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Home</a>
+		    <a class="nav-link disabled" href="home" tabindex="-1" aria-disabled="true">Home</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" href="index">Login</a>
+		    <a class="nav-link" href="login" id="LoginButton">Login</a>
 		  </li>
 		</ul>	
 	</nav>
@@ -30,10 +30,10 @@
 		</div>
 		<div class="col-1"></div>
 		<div class="col-4" id="forms">
-			<form action="login.html">
 				<div class="form-group">
-					<label for="name">Name</label>
+					<label for="name">Username</label>
 					<input type="text" name="name" class="form-control" placeholder="Your Name" id="name">
+				<small id="UserNameAvailability"></small>
 				</div>
 				<div class="form-group">
 					<label for="email1">Email address</label>
@@ -41,16 +41,18 @@
 				</div>
 				<div class="form-group">
 					<label for="pass1">Password</label>
-					<input type="password" name="password" class="form-control" placeholder="Password" id="pass1">
+					<input name="password" class="form-control" placeholder="Password" type="password" id="pass1">
+				</div>
+				<div style="color:red" align="left">
+					<small id="password_errors"></small>
 				</div>
 				<div class="form-group form-check">
 					<input type="checkbox" class="form-check-input" id="checkpoint">
-					<label class="form-check-label" for="checkpoint" value="" required><small>I have read and agree to the<a href="#"> terms and conditions</a></small>.</label>
+					<label class="form-check-label" for="checkpoint" required><small>I have read and agree to the<a href="#"> terms and conditions</a></small>.</label>
 				</div>
-				<button type="submit" class="btn btn-primary"> SignUp </button>
-
-			</form>
+				<button class="btn btn-primary" id="SignUpButton"> SignUp </button>
 		</div>
-        
+<script type="text/javascript" src="/static/js/home_script.js?bsigiggfiu"></script>
+    
 </body>
 </html>
