--- a/templates/query.html
+++ b/templates/query.html
@@ -15,7 +15,7 @@
 		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Home</a>
 		  </li>
 		  <li class="nav-item">
-		    <a class="nav-link" href="home">Logout</a>
+		    <a class="nav-link" href="home_with_logout">Logout</a>
 		  </li>
 		</ul>	
 	</nav>
