--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,12 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-auto site-logo">
             <a href="/" title="Privaz">
-              <h1 id="site-logo">Privaz</h1>
+              <h1 id="site-logo">privaZ</h1>
             </a>
           </div>
+
           <div class="col-auto">
+            {% if current_user.is_anonymous %}
             <a
               href="#login-modal"
               class="btn-login"
@@ -30,6 +32,12 @@
             >
               Login
             </a>
+
+            {% else %}
+            <a href="home_with_logout" class="btn-login" id="logout-btn"
+              >Logout</a
+            >
+            {% endif %}
           </div>
         </div>
       </div>
@@ -41,7 +49,7 @@
 
     <footer id="site-footer">
       <div class="container text-center">
-        &copy; 2019 - PRIVAZ
+        &copy; 2019 - privaZ
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
